--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                                 </cells>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Icf-Gm-nhu" secondAttribute="trailing" id="8Zo-cf-zyc"/>
                             <constraint firstItem="Icf-Gm-nhu" firstAttribute="top" secondItem="iDi-HQ-5yM" secondAttribute="bottom" id="JyW-mO-NtH"/>
